--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ services:
     build: .
     container_name: app
     working_dir: /var/www
+    user: "1000:1000"
     volumes:
       - ./laravel:/var/www
       - ./php.ini:/usr/local/etc/php/php.ini
     networks:
       - laravel
+
   webserver:
     image: nginx:latest
     container_name: nginx_server
@@ -18,6 +20,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - laravel
+
   db:
     image: mysql:8.0
     container_name: mysql_db
@@ -30,6 +33,7 @@ services:
       MYSQL_PASSWORD: laravel
     networks:
       - laravel
+
 networks:
   laravel:
     driver: bridge
